# DecoderVIS

./: .gitignore  .gitmodules  CMakeLists.txt  DecoderVis.cpp  DecoderVis.h  MWPM_GUI.vcxproj  MWPM_GUI.vcxproj.filters  README.md  app.cpp  asset-manifest.json  imgui.ini  index.html  mwpm.sln  mwpmvis.sln  scene.gltf
Release/gui.tlog/: CL.command.1.tlog  gui.lastbuildstate
decoder/: CMakeLists.txt  app.cpp  decoder.vcxproj  decoder.vcxproj.filters
decoder/logic/include/: GenericCode.h  RotatedPlanarCode.h  decoder.h  simulation.h
decoder/logic/src/: GenericCode.cpp  RotatedPlanarCode.cpp  decoder.cpp  simulation.cpp
decoder/render/include/: app.cpp  central_node_handler.h  engine.h  ig_contentwindow.h  ig_window.h  index_buffer.h  input.h  renderer.h  shader.h  texture.h  theme.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
decoder/render/src/: app.cpp  engine.cpp  error_utils.cpp  ig_contentwindow.cpp  ig_window.cpp  index_buffer.cpp  input.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
decoder/res/shaders/: Basic.shader  Fbo.shader  Texture.shader
include/: Controller.h  Decoder.h  GenericCode.h  RotatedPlanarCode.h  SceneView.h  Window.h  app.h  file_manager.h  shaderClass.h
logic/include/: GenericCode.h
logic/src/: RotatedPlanarCode.cpp
render/include/: ig_contentwindow.h  input.h  renderer.h  shader.h  vertex_buffer.h
render/src/: CMakeLists.txt  central_node_handler.cpp  ig_window.cpp  vertex_array.cpp
res/shaders/: Color.shader  Texture.shader
src/: App.cpp  Controller.cpp  GenericCode.cpp  RotatedPlanarCode.cpp  SceneView.cpp  Window.cpp  app.cpp  file_manager.cpp  main.cpp  mwpmvis.sln  opengl_shader.cpp
src/MWPM_GUI/: MWPM_GUI.vcxproj  Window.h  main.cpp
src/MWPM_GUI/Debug/: MWPM_GUI.vcxproj.FileListAbsolute.txt  example_glfw_opengl3.exe.recipe  mvis_gui.exe.recipe  (+1 more)
static/js/: 453.d072a456.chunk.js  453.d072a456.chunk.js.map  main.3726feb4.js  main.3726feb4.js.map  main.6a06ce56.js  main.6a06ce56.js.LICENSE.txt  main.6a06ce56.js.map
static/media/: test.7145d1b6dd05960dc52e.py
visapp/: package-lock.json  package.json
visapp/public/: index.html
visapp/src/: App.tsx  declaration.d.ts
(+18 files in other folders)
